Fixed the LayeredView not clearing. Removed printlns. Fixed layout issue.

--- a/public/stylesheets/bizzle/bizzle-classes.css
+++ b/public/stylesheets/bizzle/bizzle-classes.css
@@ -159,3 +159,7 @@
   height: 100%;
 }
 
+.contained {
+	height: 92%;
+	min-height: 92%;
+}
